<resources>
    <string name="app_name">Movement Reminder</string>
    <string name="PainForm">Pain Form</string>
    <string name="AddExercise">Add Exercise</string>
    <string name="ViewAnalysis">View Analysis of Joint Pains Overtime</string>

    <string name="Settings">settings</string>

    <string name="NotificationsOverall">notificationsOverall</string>
    <string name="submitwhichjoint">"Which Joint ? "</string>
    <string name="submitbutton">"Which Joint ? "</string>
    <string name="submitbutton2">"Lower Back "</string>
    <string name="submitbutton3">"The elbow and lower arm "</string>
    <string name="submitbutton4">Lower back</string>
    <string name="submitbutton5">"Knees and Legs "</string>
    <string name="submitbutton7">Shoulder and Elbow</string>
    <string name="submitbutton8">Lower back</string>
    <string name="submitbutton9">Elbow and Shoulder</string>
    <string name="submitbutton10">"Knees and Legs "</string>
    <string name="submittext">"Rate your pain "</string>
    <string name="submitrateyourpain">Rate your pain</string>
    <string name="SubmitRateyourpain">Rate your pain</string>
    <string name="submittextview">"Rate my pain "</string>
    <string name="submitbutton13">Back</string>
    <string name="submitbutton12">"Back "</string>
    <string name="submitbutton14">Next</string>

    <string name="notifOverallTxt">Notifications Overall:</string>
    <string name="randoNotifIntervBrackTxt">(From 7am - 11pm : 5 Random Notifications)</string>
    <string name="randoNotifIntervTxt">Random Notification Interval:</string>
    <string name="NotifIntervalTxt">Notification Interval:</string>
    <string name="notifAmountTxt">Notification Amount:</string>
    <string name="StartTxt">Start:</string>
    <string name="EndText">End:</string>
    <string name="skipExerciseTxt">SKIP EXERCISE</string>
    <string name="timeRemainTxt">TIME REMAINING</string>
    <string name="submitbutton15">Back</string>


</resources>
