<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:translationY="20dp">

        <Switch
            android:id="@+id/NotificationsOverall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notifOverallTxt"
            android:textSize="22sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="30dp" />

        <Switch
            android:id="@+id/RandoNotificationInterval"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/randoNotifIntervTxt"
            android:textAlignment="center"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/randNotifIntervBrackTxt"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/randoNotifIntervBrackTxt"
            android:textSize="12sp"
            android:textStyle="italic" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="30dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"></LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/notifAmountTxt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/notifAmountTxt"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/editTextNumber2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:inputType="number" />

            </LinearLayout>

            <TextView
                android:id="@+id/NotifIntervalTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/NotifIntervalTxt"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/StartTxt"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/EndText"
                    android:textAlignment="center"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TimePicker
                    android:id="@+id/startNotifiInterval"
                    android:layout_width="210dp"
                    android:layout_height="140dp"
                    android:timePickerMode="spinner" />

                <TimePicker
                    android:id="@+id/endNotifiInterval"
                    android:layout_width="210dp"
                    android:layout_height="140dp"
                    android:timePickerMode="spinner" />
            </LinearLayout>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="60dp" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:translationY="450dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Dark Mode:"
            android:textSize="15sp" />

        <ToggleButton
            android:id="@+id/toggleButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ToggleButton" />

    </LinearLayout>

</RelativeLayout>